feat: add auth grpc server and cli
