# internal/auth/handlers.go
@@ -1,25 +1,31 @@
 package auth
 
 import (
+	"context"
 	"errors"
 	"net/http"
 
 	"github.com/julianstephens/feature-flag-service/internal/rbac/users"
+	"github.com/julianstephens/feature-flag-service/internal/utils"
 	authutils "github.com/julianstephens/go-utils/httputil/auth"
+	"github.com/julianstephens/go-utils/security"
 )
 
 var (
-	ErrUserNotFound = errors.New("No user associated with email address")
+	ErrUserNotFound = errors.New("no user associated with email address")
 )
 
 func LoginHandler(authSvc *AuthClient, rbacUserService *users.RbacUserService) http.HandlerFunc {
 	return authutils.AuthenticationHandler(authSvc.Manager, func(username, password string) (*authutils.UserInfo, error) {
-		rbacUser, err := rbacUserService.GetUserByEmail(username)
+		ctx, cancel := context.WithTimeout(context.Background(), utils.DEFAULT_TIMEOUT)
+		defer cancel()
+
+		rbacUser, err := rbacUserService.GetUserByEmail(ctx, username)
 		if err != nil {
 			return nil, err
 		}
 
-		if !authutils.CheckPasswordHash(password, rbacUser.Password) {
+		if !security.VerifyPassword(password, rbacUser.Password) {
 			return nil, errors.New("invalid password")
 		}
 
